# eventra-ai

./: .gitignore  README.md  pyproject.toml  run_demo.py
backend/: .env.example  PROJECT-BOOTSTRAP.md  README.md  api.py  pyproject.toml
backend/data/: seed_db.py
backend/evals/: eval_budget.py  eval_communications.py  eval_coordinator.py  eval_venue.py  llm_judge.py
backend/src/event_planner/: graph.py
backend/src/event_planner/agents/: budget.py  coordinator.py  venue.py
backend/src/event_planner/llm/: client.py
backend/src/event_planner/observability/: tracer.py
backend/src/event_planner/prompts/: budget_prompt.py  coordinator_prompt.py  venue_prompt.py
backend/src/event_planner/state/: event_state.py
backend/tests/: conftest.py  test_budget.py  test_communications.py  test_coordinator.py  test_end_to_end.py
data/: venues.sql
docs/: REPORT.md  architecture.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BudgetSection.tsx  ClarificationView.tsx  CommunicationsSection.tsx  EventInputForm.tsx  Header.tsx  PipelineProgress.tsx  RequirementsCard.tsx  VenueSection.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
src/event_planner/agents/: communications.py  coordinator.py
src/event_planner/prompts/: budget_prompt.py  communications_prompt.py  coordinator_prompt.py
src/event_planner/state/: event_state.py
src/event_planner/tools/: requirements_validator.py  venue_lookup.py  weather_check.py
tests/: test_budget.py  test_coordinator.py  test_venue.py
(+11 files in other folders)
