[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-event-planner"
version = "0.1.0"
description = "Multi-agent AI event planning system (LangGraph + Ollama)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "ollama>=0.3",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
strict = true
python_version = "3.11"
